--- a/main.html
+++ b/main.html
@@ -6,9 +6,19 @@
 	<link rel="stylesheet" href="styles.css">
 </head>
 
-<body>
-	<!-- the entire body must be written by student -->
-    <script type="text/javascript" src="./script.js">
+<body style="background-color: yellow; text-align: center;">
+
+    <!-- First Div: Flowers Photos -->
+    <div>
+        <h1 id="f1">Flowers photos</h1>
+        <p>Flowers are beautiful plants that bloom with various colors and shapes. They are an essential part of nature and contribute to the beauty of the world.</p>
+    </div>
+
+    <!-- Second Div: Roses Pictures -->
+    <div>
+        <h1 id="f2">Roses pictures</h1>
+        <p>Roses are known for their classic beauty and enchanting fragrance. They come in many colors and are symbols of love, passion, and elegance.</p>
+    </div>
 </script>
 
 </body>
